@@ -2,6 +2,7 @@ Bug fixes in 1.17.1:
  * Fix Print dialog
  * Fix command-line "Print" command
  * Fix duplicate axes drawn in grid
+ * Fix crash adding empty polar plot
 
 Changes in 1.17:
  * Add new broken axis widget with gaps in the numerical sequence
